<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">Cyfa Beta</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_navigate">Next</string>
    <string name="title_activity_cyfa_team">Cyfa Team</string>
    <string name="launchscreen_description">launch screen</string>
    <string name="welcome_text">Hi</string>
    <string name="thanks_message">thanks for installing!</string>
    <string name="welcome_message">Connect with friends and keep the <b>private</b> stuff private.</string>
    <string name="theme_color_text">pick a theme color</string>
    <string name="theme_color_text_message">Your theme color can be changed at anytime</string>
    <string name="confirm_number_text">Cyfa needs to confirm your number</string>
    <string name="enter_number_text">enter phone number</string>
    <string name="profile_name_text">profile name here</string>
    <string name="verification_code_text">code here</string>
    <string name="passcode_text">passcode</string>
    <string name="retype_passcode_text">re-type passcode</string>
    <string name="promise_text">We promise not to share or sell your info</string>
    <string name="privacy_policy_text">Please read our Privacy Policy</string>
    <string name="verify_code_text">Verification Code</string>
    <string name="verify_code_message_text">please enter the verification code\n we sent you</string>
    <string name="auto_verify_code_message_text">your number was verified</string>
    <string name="profile_name_message_text">please enter your profile name\n below</string>
    <string name="phone_number_message_text">enter your phone number below. </string>
    <string name="new_chat_title_text">New chat in </string>
    <string name="resend_text">click below to resend the code if you don\'t receive it in 2 minutes</string>
    <string name="change_number_text">Change Number</string>
    <string name="regular_message_text">regular messages</string>
    <string name="private_message_text">private messages. sketched messages.</string>
    <string name="timestamped_message_text">timestamped messages.</string>
    <string name="more_text">more</string>
    <string name="profile_name_title_text">profile name</string>
    <string name="phone_number_title_text">Your number</string>
    <string name="back_arrow_description">back arrow</string>
    <string name="application_logo">application logo</string>
    <string name="welcome_icons">welcome icons</string>
    <string name="privacy_policy_caption">We promise not to share or sell your info</string>
    <string name="view_privacy_policy_text">View Our <u>Privacy Policy</u></string>
    <string name="resend_button_text">Didn\'t get it? Tap to <b>resend</b></string>
    <string name="re_enter_phone_number_text">re-enter phone number</string>
    <string name="phone_icon_description">a picture of a phone</string>
    <string name="lock_icon_description">a picture of a lock</string>
    <string name="ready_arrow_icon_description">arrow pointing down</string>
    <string name="color_text">pomegranate</string>
    <string name="theme">theme</string>
    <string name="search_text">Select Country</string>
    <string name="validation_code_back_arrow_description">click to go back and change your number</string>
    <string name="number_validation_title">Number Validation</string>
    <string name="number_validation_subtitle">Please Confirm</string>
    <string name="number_validation_message">
        \n\n If this is your number?\nWe will SMS a validation code to you \n
    </string>
    <string name="walkthrough_logo_description">logo for walkthrough</string>
    <string name="walkthrough_left_arrow_description">left arrow for walkthrough</string>
    <string-array name="team_tabs">
        <item>Chats</item>
        <item>Feedback</item>
        <item>About</item>
    </string-array>
    <string-array name="status_tabs">
        <item>Feed</item>
        <item>Contacts</item>
    </string-array>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="contact_search_hint">Search Contacts</string>
    <string name="contact_image_description">your phone book contact images</string>
    <string name="please_wait">Please wait…</string>
    <string name="text_loading">Loading</string>
    <string name="done">DONE</string>
    <string name="skip_text">skip</string>
    <string name="send_text">SEND</string>
    <string name="write_message_hint">write message</string>
    <string name="edit_text">EDIT</string>
    <string name="save_text">SAVE</string>
    <string name="next_text">NEXT</string>
    <string name="theme_finish_button">FINISH</string>
    <string name="later_text">LATER</string>
    <string name="get_started_button_text">GET STARTED</string>
    <string name="continue_button_text">CONTINUE</string>
    <string name="welcome_button_text">LET\'S GO</string>
    <string name="title_activity_loader">LoaderActivity</string>
    <string name="text_syncing">Syncing</string>
    <string name="text_syncing_contacts">Syncing Contacts</string>
    <string name="text_connection_status">Connecting</string>
    <string name="english_alphabets">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_-.@# </string>
    <string name="text_message_hint">Write Message</string>
    <string name="today_text">TODAY</string>
    <string name="online_text">LIVE</string>
    <string name="offline_text"></string>
    <string name="typing_indicator_text"><i>IS TYPING&#8230;</i>
        </string>
    <string name="live_typing_text"><i>LIVE TYPING&#8230;</i>
        </string>
    <string name="members_text">MEMBERS</string>
    <string name="connecting_text"><i>Connecting&#8230;</i></string>
    <string name="new_message_text"><i>Loading New Messages&#8230;</i></string>
    <string name="sent_status_text">SENT</string>
    <string name="delete_message_text">DELETE</string>
    <string name="edit_message_text">EDIT</string>
    <string name="private_status_text">PRIVATE</string>
    <string name="read_status_text">READ</string>
    <string name="edit_status_text">WAS EDITED</string>
    <string name="pending_status_text">PENDING</string>
    <string name="take_photo_text">Take Photo</string>
    <string name="gallery_text">Gallery</string>
    <string name="camera_text">Camera</string>
    <string name="video_text">Video</string>
    <string name="more_options_text">More Options</string>
    <string name="profile_text">View Profile</string>
    <string name="delete_messages_text">Delete Messages</string>
    <string name="do_not_disturb_text">Do Not Disturb</string>
    <string name="block_text">Block User</string>
    <string name="textChooseTimer">Choose Timer</string>
    <string name="choose">Choose</string>
    <string name="take_video_text">Take Video</string>
    <string name="choose_photo_text">Choose Photo</string>
    <string name="choose_video_text">Choose Video</string>
    <string name="default_status_message">The man who moves a mountain begins by carrying away small stones.</string>
    <string name="default_point_text">00</string>
    <string name="choose_passcode_description">Passcode must be 4 characters</string>
    <string-array name="timer_text">
        <item>20</item>
        <item>40</item>
        <item>60</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>