<menu xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <item
            android:id="@+id/text_profile"
            android:title="@string/profile_text"
            android:icon="@drawable/ic_view_profile"/>
    <item
            android:id="@+id/text_delete_messages"
            android:title="@string/delete_messages_text"
            android:icon="@drawable/ic_delete_messages"/>
    <item
            android:id="@+id/text_do_not_disturb"
            android:title="@string/do_not_disturb_text"
            android:icon="@drawable/ic_no_not_disturb"/>
    <item
            android:id="@+id/text_block"
            android:title="@string/block_text"
            android:icon="@drawable/ic_block"/>

</menu>
