<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black"
                tools:context=".MainActivity">

    <ImageView
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:src="@drawable/ico_launcher"
        android:id="@+id/logo"
        style="@style/welcomeLogo"
        android:contentDescription="@string/application_logo"/>

    <ImageView
        android:layout_width="@dimen/logo_text_width"
        android:layout_height="@dimen/logo_text_height"
        android:layout_marginTop="@dimen/logo_text_margin_top"
        android:src="@drawable/ic_logo_text"
        android:id="@+id/logo_text"
        android:layout_below="@id/logo"
        style="@style/welcomeLogo"
        android:contentDescription="@string/application_logo"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_below="@id/logo_text"
        android:textSize="@dimen/welcome_text_size"
        android:layout_marginTop="@dimen/welcome_text_margin_top"
        android:layout_marginLeft="@dimen/welcome_text_spacing"
        android:layout_marginStart="@dimen/welcome_text_spacing"
        android:layout_marginRight="@dimen/welcome_text_spacing"
        android:layout_marginEnd="@dimen/welcome_text_spacing"
        android:textColor="@android:color/white"
        android:id="@+id/text_welcome_message"
        android:fontFamily="@string/font_light"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:id="@+id/button_lets_go"
        android:text="@string/welcome_button_text"
        style="@style/buttonSignUp"
        />


</RelativeLayout>
