<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:orientation="vertical">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/choose_passcode_description"
              android:layout_marginBottom="@dimen/material_design_16"
              android:textColor="@color/cod_gray"/>

    <android.support.design.widget.TextInputLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:id="@+id/text_passcode_layout"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:errorEnabled="true">

        <EditText
                android:id="@+id/text_passcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_regular"
                android:hint="@string/passcode_text"
                android:inputType="phone"
                android:maxLength="4"
                android:textColor="@color/black_54_pc"
                android:textColorHint="@color/black_54_pc"
                android:textSize="@dimen/text_phone_number_text_size"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:id="@+id/text_retype_passcode_layout"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:errorEnabled="true">

        <EditText
                android:id="@+id/text_retype_passcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_regular"
                android:hint="@string/retype_passcode_text"
                android:inputType="phone"
                android:maxLength="4"
                android:textColor="@color/black_54_pc"
                android:textColorHint="@color/black_54_pc"
                android:textSize="@dimen/text_phone_number_text_size"/>

    </android.support.design.widget.TextInputLayout>

</LinearLayout>